# Leptonica

./: CMakeLists.txt
3rdlibs/libjasper/: CMakeLists.txt
3rdlibs/libjasper/base/: CMakeLists.txt  jas_getopt.c
3rdlibs/libjasper/bmp/: CMakeLists.txt  bmp_dec.c
3rdlibs/libjasper/include/jasper/: jas_config2.h
3rdlibs/libjasper/jp2/: CMakeLists.txt
3rdlibs/libjasper/jpc/: CMakeLists.txt  jpc_t1dec.c  jpc_tsfb.c
3rdlibs/libjasper/jpg/: CMakeLists.txt
3rdlibs/libjasper/mif/: CMakeLists.txt  mif_cod.c
3rdlibs/libjasper/pgx/: CMakeLists.txt
3rdlibs/libjasper/pnm/: CMakeLists.txt  pnm_dec.c
3rdlibs/libjasper/ras/: CMakeLists.txt
3rdlibs/libjpeg/: CMakeLists.txt  jconfig.h.cmakein  jdatadst.c  jdatasrc.c  jerror.c  jerror.h  jmemansi.c  jmemdos.c  jmemmac.c  jmemmgr.c  jmemname.c  jmemsys.h  jmorecfg.h  jpeglib.h
3rdlibs/libjpeg/contrib/tools/: CMakeLists.txt  cdjpeg.c  jpegtester.cmake  rdjpgcom.c  wrjpgcom.c
3rdlibs/libpng/: CMakeLists.txt
3rdlibs/libpng/contrib/: CMakeLists.txt
3rdlibs/libtiff/: CMakeLists.txt  tif_codec.c  tif_compress.c  tif_config.h.cmakein  tif_dir.c  tif_dir.h  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_extension.c  tif_getimage.c  tif_jpeg.c  tif_ojpeg.c  tif_open.c  tif_pixarlog.c  tif_unix.c  tif_win32.c  tif_zip.c  tiffconf.h.cmakein  tiffio.h  tiffiop.h
3rdlibs/libtiff/contrib/port/: CMakeLists.txt  getopt.c  libport.h  strtoull.c
3rdlibs/libtiff/contrib/test/: CMakeLists.txt  TiffLibsTester.cmake  TiffSplitTester.cmake  TiffTesterApis.cmake  ascii_tag.c  check_tag.c  custom_dir.c  long_tag.c  rewrite_tag.c  short_tag.c  strip_rw.c  test_arrays.c
3rdlibs/libtiff/contrib/tools/: CMakeLists.txt  bmp2tiff.c  fax2ps.c  raw2tiff.c  tiff2pdf.c  tiff2ps.c  tiffcp.c  tiffcrop.c  tiffdump.c
3rdlibs/libwebp/: CMakeLists.txt
3rdlibs/libzlib/: CMakeLists.txt  gzguts.h  gzlib.c  gzread.c  gzwrite.c  zlibtester.cmake
3rdlibs/libzlib/contrib/test/: example.c  minigzip.c
cmake/: Find3rdLibs.cmake
config/: config_auto.h.cmakein
prog/: CMakeLists.txt
src/: CMakeLists.txt
